--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/trevorfarthing/spellbovnd-website#readme",
   "devDependencies": {
+    "dart-sass": "^1.25.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
@@ -26,6 +27,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
     "gulp-useref": "^5.0.0"
   },
